<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:background="@drawable/bg_white_c5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:gravity="center"
            android:text="解除绑定"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="182****6874"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/mb_kuang_gray_5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="输入验证码"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/color_6"
                android:textSize="12dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:background="@color/line" />

            <TextView
                android:id="@+id/get_code"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/get_ver_code"
                android:textColor="@color/main_btn_selected_color"
                android:textSize="12dp" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/content"
            android:layout_marginTop="35dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/line2"
            android:gravity="bottom">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="15dp" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/line" />

            <TextView
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/red53"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>